2007-10-05  Andreas K. Foerster  <info@akfoerster.de>

	* avatarsay.c (check_system_encoding):
	new function: try to get encoding from LC_ALL, LC_CTYPE or LANG

	* gnome-akfavatar:
	open Website from menu
	
	* avatarsay.c (help, handle_image_command)
	(handle_avatarimage_command, handle_audio_command):
	datadir needs no trailing slash anymore

2007-09-27  Andreas K. Foerster  <info@akfoerster.de>

	* version 0.14.1 released

	* avatar.c (avt_say):
	fix: check for events with each char, when the delay is switched off

	* akfavatar.h, avatar.c (avt_set_text_delay, avt_set_flip_page_delay):
	new functions
	(avt_set_delays): marked deprecated
	
	* akfavatar.pas (SetTextDelay, SetFlipPageDelay)
	new functions

	* akfavatar.pas 
	(MoveAvatarIn): fix: after initializing the system, the avatar
	  isn't moved in a second time
	(MoveAvatarOut): if not initialized, do nothing

	* avatar.c (avt_initialize):
	ballonheight is aligned with the LINEHEIGHT

	* akfavatar.h, avatar.c (avt_set_scroll_mode, avt_get_scroll_mode):
	new functions

	* akfavatar.h, avatar.c (avt_delete_lines, avt_insert_lines):
	new functions
	
	* akfavatar.pas (ClearKeys):
	new procedure

	* avatar.c (avt_say, avt_new_line):
	fix: new line after the last line make the text scroll or page flip
	(fixes bug introduced in 0.13.1)
	
	* avatar.c (avt_say, avt_ask):
	fix: off-by-one error fixes

        * akfavatar.pas (fpc_io_read, gpc_io_read):
	fix: clear keyboard buffer

	* akfavatar.h, avatar.c (avt_viewport):
	new function

	* akfavatar.h, avatar.c (avt_bell, avt_flash):
	new functions

	* akfavatar.pas (beep, flash):
	new procedures

	* akfavatar.pas (initializeAvatar):
	always try to initialize the audio system
	
	* avatar.c (avt_say, avt_ask):
	support avt_bell

	* avatar-audio.c (avt_initialize_audio, avt_quit_audio):
	register audio sound with bell function
	(short_audio_sound): new function
	
	* separate compilation of the font
	
	* avatar.c (avt_drawchar):
	fix: font-rendering for QVGA fixed
